# penrose

./: .gitignore  penrose.cabal
app/: Main.hs
src/: Draw.hs  Penrose.hs  Triangle.hs  Vec2.hs
