name:                penrose
version:             0
synopsis:            Quchen's Stack template
description:         See README.md
homepage:            https://github.com/quchen/penrose#readme
license:             BSD3
license-file:        LICENSE.md
author:              David »quchen« Luposchainsky <dluposchainsky+penrose (λ) gmail>
maintainer:          David »quchen« Luposchainsky <dluposchainsky+penrose (λ) gmail>
copyright:           David »quchen« Luposchainsky <dluposchainsky+penrose (λ) gmail>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    build-depends:
          base >= 4.7 && < 5
        , cairo
    hs-source-dirs:      src
    exposed-modules:     Draw
                       , Penrose
                       , Triangle
                       , Vec2
    default-language:    Haskell2010
    ghc-options:         -Wall

executable penrose-exe
    build-depends:
          base
        , penrose
        , cairo
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quchen/penrose
